--- a/web/inventoryForm.html
+++ b/web/inventoryForm.html
@@ -12,7 +12,7 @@ and open the template in the editor.
     </head>
     <body>
         <div>
-            <form action="hello" method="post">
+            <form action="inventory" method="post">
                 <label>Name</label>
                 <input type="text" name="usersName" />
                 <input type="submit" />
