--- a/web/inventoryForm.html
+++ b/web/inventoryForm.html
@@ -1,22 +1,38 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>
-            <form action="inventory" method="post">
-                <label>Name</label>
-                <input type="text" name="usersName" />
-                <input type="submit" />
-            </form>
-        </div>
-    </body>
+<head>
+	<title>Inventory Form</title>
+</head>
+<body>
+	<div>
+		<h1>Inventory Form</h1>
+	</div>
+	<div>
+		<form action="inventory" method="post">
+			<div>
+				<label for="upc">UPC</label>
+				<input type="text" id="upc" name="upc" />
+			</div>
+			<div>
+				<label for="shortDetails">Short Details</label>
+				<input type="text" id="shortDetails" name="shortDetails" />
+			</div>
+			<div>
+				<label for="longDetails">Long Details</label>
+				<input type="text" id="longDetails" name="longDetails" />
+			</div>
+			<div>
+				<label for="price">Price</label>
+				<input type="text" id="price" name="price" />
+			</div>
+			<div>
+				<label for="stock">Stock</label>
+				<input type="text" id="stock" name="stock" />
+			</div>
+			<div>
+				<input type="submit" value="Submit Product" />
+			</div>
+		</form>
+	</div>
+</body>
 </html>
